--- a/README
+++ b/README
@@ -11,3 +11,5 @@ post_max_size          1024M
 Set your 'imagePath' and 'url' in the config file as the scripts use it
 
 Insert .obj and .txt files in the 'files' table for an existing session
+
+THIS IS A TEST
